# fdpose

./: CMakeLists.txt  package.xml  tcp2bowl.npy
scripts/: Utils.py  estimater.py  getnpy.py  pose_estimator_node.py  pose_estimator_test.py  requirements.txt  run_demo.py  sendtf.py  sendtf_all.py
scripts/bundlesdf/mycuda/: setup.py
scripts/learning/datasets/: h5_dataset.py
scripts/learning/training/: predict_pose_refine.py  predict_score.py
scripts/model/huojia（复件）/: Coca_cola.ply
scripts/naviai_manip_srvs/: CMakeLists.txt  package.xml
scripts/naviai_manip_srvs/srv/: GraspPlan.srv  InstSeg.srv  PoseEst.srv  RobotExec.srv  RobotHandJointSrv.srv
scripts/op_test/: CMakeLists.txt
scripts/op_test/include/: op_test.h
scripts/op_test/src/: op_test.cc  op_test.cu
scripts/op_test/torch_app/: torch_op_test.cc
scripts/trt_py_test/: CMakeLists.txt  trt.cpp  trt.py
scripts/trt_py_test/include/: trt_engine.h
scripts/trt_py_test/plugins/common/: checkMacrosPlugin.cpp  plugin.cpp  plugin.h
scripts/trt_py_test/plugins/layerNormPlugin/: layerNormKernel.cu  layerNormKernel.h  layerNormPlugin.cpp  layerNormPlugin.h
scripts/trt_py_test/src/: trt_engine.cc  trt_engine_pybind.cc
